--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,12 +21,15 @@
       <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes/question">Preguntas</a></span>
+        <span><a href="/quizes/author">Autor</a></span>      
       </nav>
       <section class="main" id="s1">
         <%- body %>
       </section>
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+        <p></p>
+        <a href="https://github.com/sob111/qiz2015">Proyecto en GitHub</a>
       </footer>
     </div>
   </body>
