--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,8 @@
       </header>
       <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
-        <span><a href="/quizes">Preguntas</a></span>
+        <span><a href="/quizes/search">Buscar Preguntas</a></span>
+        <span><a href="/quizes/all">Preguntas</a></span>
         <span><a href="/quizes/author">Autor</a></span>      
       </nav>
       <section class="main" id="s1">
